# VanKtest

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  VanK.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake command.txt  cmake_install.cmake
SandBox/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  SandBox.sln  SandBox.vcxproj  SandBox.vcxproj.filters  cmake_install.cmake
SandBox/SandBox.dir/Debug/: .d.json  SandBox.exe.recipe  SandBox.ilk  sandbox.cpp.module.json
SandBox/SandBox.dir/Debug/SandBox.tlog/: CL.command.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SandBox/SandBox.dir/Debug/SandBox_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
SandBox/src/: SandBox.cpp
VanK/: CMakeLists.txt  VanK.vcxproj  VanK.vcxproj.filters  cmake_install.cmake
VanK/VanK.dir/Debug/: .d.json  VanK.lib.recipe  application.cpp.module.json  imgui.cpp.module.json  imgui_demo.cpp.module.json  imgui_draw.cpp.module.json  imgui_impl_opengl3.cpp.module.json  imgui_impl_sdl3.cpp.module.json  imgui_tables.cpp.module.json  imgui_widgets.cpp.module.json  renderer.cpp.module.json  shader.cpp.module.json  texture.cpp.module.json  vank.cpp.module.json  window.cpp.module.json
VanK/VanK.dir/Debug/VanK.tlog/: CL.command.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog  VanK.lastbuildstate
VanK/VanK.dir/Debug/VanK_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
VanK/src/: Application.cpp  Application.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VanK.h  Window.cpp  Window.h  check.txt  core.h
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
